# regex-pcre-builtin

./: LICENSE  regex-pcre-builtin.cabal
pcre/: config.h
src/Text/Regex/: PCRE.hs
src/Text/Regex/PCRE/: Wrap.hsc
