Cabal-Version:          1.12
Name:                   regex-pcre
Version:                0.94.4.1

build-type:             Simple
license:                BSD3
license-file:           LICENSE
copyright:              Copyright (c) 2006, Christopher Kuklewicz
author:                 Christopher Kuklewicz
maintainer:             hvr@gnu.org
bug-reports:            https://github.com/hvr/regex-pcre
synopsis:               Replaces/Enhances Text.Regex
category:               Text
description:
  <http://pcre.org/ PCRE> backend for <//hackage.haskell.org/package/regex-base regex-base>

extra-source-files:
  ChangeLog.md

library
  exposed-modules:
      Text.Regex.PCRE
      Text.Regex.PCRE.Wrap
      Text.Regex.PCRE.String
      Text.Regex.PCRE.Sequence
      Text.Regex.PCRE.ByteString
      Text.Regex.PCRE.ByteString.Lazy

  other-modules:
      Paths_regex_pcre

  default-language: Haskell2010
  default-extensions:
      MultiParamTypeClasses
      FunctionalDependencies
      ForeignFunctionInterface
      ScopedTypeVariables
      GeneralizedNewtypeDeriving
      FlexibleContexts
      TypeSynonymInstances
      FlexibleInstances

  build-depends: regex-base == 0.93.*
               , base       >= 4.3 && < 4.13
               , containers >= 0.4 && < 0.7
               , bytestring >= 0.9 && < 0.11
               , array      >= 0.3 && < 0.6

  ghc-options: -O2
               -Wall
  cc-options:  -DHAVE_PCRE_H -DHAVE_CONFIG_H -DPCRE_STATIC -DHAVE_INTTYPES_H -DHAVE_STDINT_H -DHAVE_STDLIB_H
  include-dirs: pcre
  includes: pcre.h config.h
  c-sources:
      pcre/pcre_byte_order.c pcre/pcre_compile.c pcre/pcre_config.c pcre/pcre_chartables.c pcre/pcre_dfa_exec.c pcre/pcre_exec.c pcre/pcre_fullinfo.c pcre/pcre_get.c pcre/pcre_globals.c pcre/pcre_jit_compile.c pcre/pcre_maketables.c pcre/pcre_newline.c pcre/pcre_ord2utf8.c pcre/pcre_refcount.c pcre/pcre_string_utils.c pcre/pcre_study.c pcre/pcre_tables.c pcre/pcre_ucd.c pcre/pcre_valid_utf8.c pcre/pcre_version.c pcre/pcre_xclass.c
