Name:                   regex-pcre-builtin
Version:                0.95.0.0
Cabal-Version:          1.12
License:                BSD3
License-File:           LICENSE
Copyright:              See LICENSE file
Author:                 Audrey Tang
Maintainer:             audreyt@audreyt.org
Stability:              Seems to work, passes a few tests
Homepage:               http://hackage.haskell.org/package/regex-pcre-builtin
Synopsis:               Replaces/Enhances Text.Regex
Description:            The PCRE backend to accompany regex-base, with bundled code from www.pcre.org
Category:               Text
Tested-With:            GHC
Build-Type:             Simple
Extra-source-files:
    pcre/config.h pcre/pcre.h pcre/pcre_byte_order.c pcre/pcre_compile.c pcre/pcre_config.c pcre/pcre_chartables.c pcre/pcre_dfa_exec.c pcre/pcre_exec.c pcre/pcre_fullinfo.c pcre/pcre_get.c pcre/pcre_globals.c pcre/pcre_internal.h pcre/pcre_jit_compile.c pcre/pcre_maketables.c pcre/pcre_newline.c pcre/pcre_ord2utf8.c pcre/pcre_printint.c pcre/pcre_refcount.c pcre/pcre_scanner.h pcre/pcre_string_utils.c pcre/pcre_study.c pcre/pcre_tables.c pcre/pcre_ucd.c pcre/pcre_valid_utf8.c pcre/pcre_version.c pcre/pcre_xclass.c pcre/pcrecpp.h pcre/pcrecpp_internal.h pcre/pcreposix.h pcre/ucp.h

source-repository head
  type:     git
  location: https://github.com/audreyt/regex-pcre-builtin

library
  hs-source-dirs: src
  exposed-modules:
      Text.Regex.PCRE
      Text.Regex.PCRE.Wrap
      Text.Regex.PCRE.String
      Text.Regex.PCRE.Sequence
      Text.Regex.PCRE.ByteString
      Text.Regex.PCRE.ByteString.Lazy
      Text.Regex.PCRE.Text
      Text.Regex.PCRE.Text.Lazy

  other-modules:
      Paths_regex_pcre_builtin

  default-language: Haskell2010
  default-extensions:
      MultiParamTypeClasses
      FunctionalDependencies
      ForeignFunctionInterface
      ScopedTypeVariables
      GeneralizedNewtypeDeriving
      FlexibleContexts
      TypeSynonymInstances
      FlexibleInstances

  build-depends: regex-base == 0.94.*
               , base       >= 4.3 && < 4.14
               , containers >= 0.4 && < 0.7
               , bytestring >= 0.9 && < 0.11
               , array      >= 0.3 && < 0.6
               , text       >= 1.2.3 && < 1.3

  if !impl(ghc >= 8)
      build-depends: fail == 4.9.*

  ghc-options: -O2
               -Wall -fno-warn-unused-imports

  Include-dirs: pcre
  Includes: pcre.h config.h
  CC-Options: -DHAVE_CONFIG_H -DPCRE_STATIC -DHAVE_INTTYPES_H -DHAVE_STDINT_H -DHAVE_STDLIB_H
  C-sources:
      pcre/pcre_byte_order.c pcre/pcre_compile.c pcre/pcre_config.c pcre/pcre_chartables.c pcre/pcre_dfa_exec.c pcre/pcre_exec.c pcre/pcre_fullinfo.c pcre/pcre_get.c pcre/pcre_globals.c pcre/pcre_jit_compile.c pcre/pcre_maketables.c pcre/pcre_newline.c pcre/pcre_ord2utf8.c pcre/pcre_refcount.c pcre/pcre_string_utils.c pcre/pcre_study.c pcre/pcre_tables.c pcre/pcre_ucd.c pcre/pcre_valid_utf8.c pcre/pcre_version.c pcre/pcre_xclass.c
